feat(model): first impl of record, view models
