# vocal/api/operations/user_profile.py
@@ -1,19 +1,48 @@
 from enum import Enum
 
 from sqlalchemy import func as f
-from sqlalchemy.sql.expression import exists, literal, select
+from sqlalchemy.sql.expression import alias, exists, join, literal, select
 
 from vocal.api.models.user_profile import UserRole, ContactMethodType
 from vocal.api.util import operation
 from vocal.api.storage.sql import user_profile, user_auth, contact_method, email_contact_method,\
         phone_contact_method, contact_method_type, user_role
+from vocal.api.storage.record import UserProfileRecord
 
 
 @operation
 async def get_user_profile(session, user_profile_id):
-    r = await session.execute(\
-        user_profile.select().where(user_profile.c.user_profile_id == user_profile_id))
-    return r.one()
+    email = contact_method.join(email_contact_method).alias()
+    phone = contact_method.join(phone_contact_method).alias()
+    rs = await session.execute(
+        select(
+            user_profile.c.user_profile_id,
+            user_profile.c.display_name,
+            user_profile.c.created_at,
+            user_profile.c.name,
+            user_profile.c.role,
+            email.c.contact_method_contact_method_id,
+            email.c.contact_method_verified,
+            email.c.email_contact_method_email_address,
+            phone.c.contact_method_contact_method_id,
+            phone.c.contact_method_verified,
+            phone.c.phone_contact_method_phone_number).\
+        select_from(user_profile).\
+        join(email, user_profile.c.user_profile_id == email.c.contact_method_user_profile_id).\
+        join(phone, user_profile.c.user_profile_id == phone.c.contact_method_user_profile_id).\
+        where(user_profile.c.user_profile_id == user_profile_id))
+    row = rs.one()
+    return UserProfileRecord(user_profile_id=row[0],
+                             display_name=row[1],
+                             created_at=row[2],
+                             name=row[3],
+                             role=row[4],
+                             email_contact_method_id=row[5],
+                             email_contact_method_verified=row[6],
+                             email_address=row[7],
+                             phone_number_contact_method_id=row[8],
+                             phone_number_contact_method_verified=row[9],
+                             phone_number=row[10])
 
 
 @operation
@@ -57,7 +86,7 @@ async def add_contact_method(session, user_profile_id, email_address=None, phone
         result = await session.execute(q)
         ex = result.scalar()
         if ex:
-            raise ValueError(f"user_profile with email {email} already exists")
+            raise ValueError(f"user_profile with email {email_address} already exists")
 
         r = await session.execute(
                 contact_method.\
